--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL = https://xgboostbackend-146546390520.us-west1.run.app/
+VITE_XGB_URL = https://xgboostbackend-146546390520.us-west1.run.app/
+VITE_BNN_URL = https://bnnbackend-1059275512484.us-central1.run.app/
